newclay/test/Compiler/Resolver/Fail/IfStatementExprBindingOnlyInIfStatement1/main.clay
main() {
    if (var x = 1; x) {
        x;
    }
    x;
}
